--- a/src/main/java/LoginJFrame.form
+++ b/src/main/java/LoginJFrame.form
@@ -112,7 +112,7 @@
                               <Group type="102" alignment="1" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Group type="102" alignment="1" attributes="0">
-                                          <Component id="Login" min="-2" pref="75" max="-2" attributes="0"/>
+                                          <Component id="Login" max="32767" attributes="0"/>
                                           <EmptySpace min="-2" pref="194" max="-2" attributes="0"/>
                                           <Component id="Reset" min="-2" pref="75" max="-2" attributes="0"/>
                                           <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
@@ -168,6 +168,9 @@
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="cc" green="cc" red="cc" type="rgb"/>
+        </Property>
+        <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+          <Color id="Default Cursor"/>
         </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="18" style="0"/>
