code sale back linked

--- a/src/main/java/CodeSaleFrame.form
+++ b/src/main/java/CodeSaleFrame.form
@@ -100,12 +100,12 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           <Component id="Delete" min="-2" pref="83" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" max="-2" attributes="0"/>
                           <Component id="Reset" min="-2" pref="83" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
                           <Component id="Save_Code" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                          <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" max="-2" attributes="0"/>
+                          <Component id="BackButton" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="txtName" alignment="1" max="32767" attributes="0"/>
                       <Component id="txtSaleOff" alignment="0" max="32767" attributes="0"/>
@@ -135,7 +135,7 @@
                   </Group>
                   <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jButton1" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="BackButton" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="Save_Code" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="Reset" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="Delete" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
@@ -198,7 +198,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtCode">
         </Component>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="BackButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="Back"/>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -207,9 +207,10 @@
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[86, 30]"/>
             </Property>
+            <Property name="name" type="java.lang.String" value="Back" noResource="true"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BackButtonActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="Delete">
