--- a/src/main/java/AdminCreateForm.form
+++ b/src/main/java/AdminCreateForm.form
@@ -103,9 +103,9 @@
                       <Component id="fullNameField" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel3" alignment="0" min="-2" pref="27" max="-2" attributes="0"/>
-                      <Component id="userNameField" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="userNameField" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
