--- a/src/main/java/DrinkFormFrame.form
+++ b/src/main/java/DrinkFormFrame.form
@@ -249,6 +249,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Reset"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="chooseImgButton">
           <Properties>
